clean getCharByImageBrightness function